--- a/navigation.yaml
+++ b/navigation.yaml
@@ -11,4 +11,4 @@ folders:
     # In this example, there is only a 'Getting Started' page and no sub-folders.
     # The add_example_page script will add a page named 'Example Page' here.
     ordering:
-    - Readme
+    - README
